plugins {
    id 'java'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.seleniumhq.selenium:selenium-java:4.38.0'
    testImplementation('com.github.javafaker:javafaker:1.0.2')
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation("org.jcommander:jcommander:1.83")
    implementation "tools.jackson.core:jackson-databind:3.0.0"
    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.2")
    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.14.2")
    implementation("com.mysql:mysql-connector-j:8.1.0")
    implementation 'org.hibernate.orm:hibernate-core:6.4.4.Final'
    implementation 'org.slf4j:slf4j-api:2.0.7'
    testImplementation 'org.slf4j:slf4j-simple:2.0.7'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

test {
    useJUnitPlatform()
    if (project.hasProperty("browser")) {
        systemProperty("browser", project.property("browser"))
    }
    if (project.hasProperty("target")) {
        systemProperty("target", project.property("target"))
    }

    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true
        exceptionFormat "full"
    }

    systemProperty "org.jboss.logging.provider", "none"
    jvmArgs "-Dorg.hibernate.SQL=OFF", "-Dorg.hibernate.type=OFF"

    systemProperty "hibernate.show_sql", "false"
    systemProperty "hibernate.format_sql", "false"

}